--- a/app/views/expenses/break_fields.html.erb
+++ b/app/views/expenses/break_fields.html.erb
@@ -8,5 +8,5 @@
 	</ul>
 </div>
 
-<%= render 'insurance_fields', expense: @expense %>
+<%= render 'break_fields', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
