--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -5,7 +5,6 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
       <th>Amount</th>
       <th>Insurance</th>
       <th>Break</th>
@@ -16,7 +15,6 @@
   <tbody>
     <% @expenses.each do |expense| %>
       <tr>
-        <td><%= expense.id %></td>
         <td><%= expense.amount %></td>
         <td>
 					<% if expense.inssurance %>
@@ -55,6 +53,9 @@
         <td><%= link_to 'Destroy', expense, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+      <tr>
+        <td><b><%= @expenses_sum %></b> DH</td>
+      </tr>
   </tbody>
 </table>
 
