--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,4 +1,13 @@
 <h1>New Expense</h1>
 
+<div style="margin-bottom: 10px">
+  <ul>
+    <li><%= link_to 'Nothing', :action => :new %></li>
+    <li><%= link_to 'Insurance', :action => :insurance_fields %></li>
+    <li><%= link_to 'Break', :action => :break_fields %></li>
+  </ul>
+</div>
+
+
 <%= render 'form', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
