--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -54,6 +54,17 @@
         </div>
     <% end %>
 
+    <% if @expense.damage %>
+
+        <div class="field">
+          <h3>Damage Fields</h3>
+          <%= form.fields_for :damage do |damage_form| %>
+              <%= damage_form.collection_select :driver_id, Driver.all, :id, :first_name , {:multiple => false} %>
+              <%= damage_form.collection_select :damage_type_id, DamageType.all, :id, :name, {:multiple => false} %>
+          <% end %>
+        </div>
+    <% end %>
+
 
     <div class="actions">
       <%= form.submit %>
