--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to 'Nothing', :action => :new %></li>
     <li><%= link_to 'Insurance', :action => :insurance_fields %></li>
     <li><%= link_to 'Break', :action => :break_fields %></li>
+    <li><%= link_to 'Damage', :action => :damage_fields %></li>
   </ul>
 </div>
 
