Add Expense Categories Navigation

--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="field">
       <%= form.label :amount %>
-      <%= form.number_field :amount, id: :expense_amount %> DH
+      <%= form.number_field :amount, id: :expense_amount %>
     </div>
 
     <div class="field">
