--- a/app/views/expenses/_nav.html.erb
+++ b/app/views/expenses/_nav.html.erb
@@ -1,8 +1,8 @@
 <div style="margin-bottom: 10px">
   <ul>
     <li><%= link_to 'Nothing', :action => :new %></li>
-    <li><%= link_to 'Insurance', :action => :insurance_fields, remote: true %></li>
-    <li><%= link_to 'Break', :action => :break_fields, remote: true %></li>
-    <li><%= link_to 'Damage', :action => :damage_fields, remote: true %></li>
+    <li><%= link_to 'Insurance', :action => :insurance_fields %></li>
+    <li><%= link_to 'Break', :action => :break_fields %></li>
+    <li><%= link_to 'Damage', :action => :damage_fields %></li>
   </ul>
 </div>
