--- a/app/views/expenses/_nav.html.erb
+++ b/app/views/expenses/_nav.html.erb
@@ -4,5 +4,6 @@
     <li><%= link_to 'Insurance', :action => :insurance_fields %></li>
     <li><%= link_to 'Break', :action => :break_fields %></li>
     <li><%= link_to 'Damage', :action => :damage_fields %></li>
+    <li><%= link_to 'Owner Take', :action => :owner_take_fields %></li>
   </ul>
 </div>
