--- a/app/views/expenses/_owner_take_fields.html.erb
+++ b/app/views/expenses/_owner_take_fields.html.erb
@@ -33,13 +33,13 @@
 
 
 			<div class="field">
-				<h3>Break Fields</h3>
-				<%= form.fields_for :break do |break_form| %>
-						<%= break_form.label :start_date %>
-						<%= break_form.date_field :start_date %>
-						<%= break_form.label :end_date %>
-						<%= break_form.date_field :end_date %>
-				<% end %>
+				<h3>Owner take Fields</h3>
+        <%= form.fields_for :owner_take do |owner_take_form| %>
+            <%= owner_take_form.collection_select :owner_id, Owner.all, :id, :first_name , {
+              :multiple => false,
+              :include_blank => 'Select an Owner'
+            } %>
+        <% end %>
 			</div>
 
 			<div class="actions">
