--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,14 +1,6 @@
 <h1>New Expense</h1>
 
-<div style="margin-bottom: 10px">
-  <ul>
-    <li><%= link_to 'Nothing', :action => :new %></li>
-    <li><%= link_to 'Insurance', :action => :insurance_fields %></li>
-    <li><%= link_to 'Break', :action => :break_fields %></li>
-    <li><%= link_to 'Damage', :action => :damage_fields %></li>
-  </ul>
-</div>
-
+<%= render 'nav' %>
 
 <%= render 'form', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
