Add Date field to Damage Expense

--- a/app/views/expenses/_damage_fields.html.erb
+++ b/app/views/expenses/_damage_fields.html.erb
@@ -43,6 +43,9 @@
             :multiple => false,
             :include_blank => 'Damage Type',
           } %>
+
+          <%= damage_form.date_field :date %>
+
 				<% end %>
 			</div>
 			
