Move Expenses forms to shared folder

--- a/app/views/expenses/break_fields.html.erb
+++ b/app/views/expenses/break_fields.html.erb
@@ -1,6 +1,6 @@
 <h1>New Expense</h1>
 
-<%= render 'nav' %>
+<%= render 'layouts/nav' %>
 
-<%= render 'break_fields', expense: @expense %>
+<%= render 'shared/break_fields', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
