--- a/app/views/expenses/insurance_fields.html.erb
+++ b/app/views/expenses/insurance_fields.html.erb
@@ -1,6 +1,6 @@
 <h1>New Expense</h1>
 
-<%= render 'nav' %>
+<%= render 'layouts/nav' %>
 
-<%= render 'insurance_fields', expense: @expense %>
+<%= render 'shared/insurance_fields', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
