--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Expense</h1>
 
-<%= render 'nav' %>
+<%= render 'layouts/nav' %>
 
-<%= render 'form', expense: @expense %>
+<%= render 'shared/form', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
