--- a/app/views/expenses/break_fields.html.erb
+++ b/app/views/expenses/break_fields.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'layouts/nav' %>
 
-<%= render 'shared/break_fields', expense: @expense %>
+<%= render 'shared/expenses/break_fields', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
