--- a/app/views/expenses/damage_fields.html.erb
+++ b/app/views/expenses/damage_fields.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'layouts/nav' %>
 
-<%= render 'shared/damage_fields', expense: @expense %>
+<%= render 'shared/expenses/damage_fields', expense: @expense %>
 <%= link_to 'Back', expenses_path %>
