--- a/app/views/shared/expenses/_form.html.erb
+++ b/app/views/shared/expenses/_form.html.erb
@@ -28,15 +28,15 @@
       <%= form.text_area :description, id: :expense_description %>
     </div>
 
-    <% if @expense.inssurance %>
+    <% if @expense.insurance %>
 
         <div class="field">
           <h3>Break Fields</h3>
-          <%= form.fields_for :inssurance do |inssurance_form| %>
-              <%= inssurance_form.label :start_date %>
-              <%= inssurance_form.date_field :start_date %>
-              <%= inssurance_form.label :end_date %>
-              <%= inssurance_form.date_field :end_date %>
+          <%= form.fields_for :insurance do |insurance_form| %>
+              <%= insurance_form.label :start_date %>
+              <%= insurance_form.date_field :start_date %>
+              <%= insurance_form.label :end_date %>
+              <%= insurance_form.date_field :end_date %>
           <% end %>
         </div>
     <% end %>
@@ -45,7 +45,7 @@
 
         <div class="field">
           <h3>Break Fields</h3>
-          <%= form.fields_for :inssurance do |break_form| %>
+          <%= form.fields_for :insurance do |break_form| %>
               <%= break_form.label :start_date %>
               <%= break_form.date_field :start_date %>
               <%= break_form.label :end_date %>
