--- a/app/views/shared/expenses/_insurance_fields.html.erb
+++ b/app/views/shared/expenses/_insurance_fields.html.erb
@@ -34,15 +34,15 @@
 			
 			<div class="field">
 				<h3>Insurance Field</h3>
-				<%= form.fields_for :inssurance do |inssurance_form| %>
+				<%= form.fields_for :insurance do |insurance_form| %>
 
-						<%= inssurance_form.label :start_date %>
-						<%= inssurance_form.date_field :start_date %>
+						<%= insurance_form.label :start_date %>
+						<%= insurance_form.date_field :start_date %>
 
-						<%= inssurance_form.label :end_date %>
-						<%= inssurance_form.date_field :end_date %>
+						<%= insurance_form.label :expiration_date %>
+						<%= insurance_form.date_field :expiration_date %>
 
-            <%= inssurance_form.collection_select :insurer_id, Insurer.all, :id, :name, {
+            <%= insurance_form.collection_select :insurer_id, Insurer.all, :id, :name, {
               :multiple => false,
               :include_blank => 'Select an Insurer',
             } %>
