--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -66,8 +66,7 @@
               <ul>
                 <li>
                   <b>Owner</b>
-                  <%= expense.owner_take.owner.first_name %>
-                  <%= expense.owner_take.owner.last_name %>
+                  <%= expense.owner_take.owner.full_name %>
                 </li>
               </ul>
           <% else %>
