--- a/app/views/shared/expenses/_damage_fields.html.erb
+++ b/app/views/shared/expenses/_damage_fields.html.erb
@@ -35,7 +35,7 @@
 			<div class="field">
 				<h3>Damage Fields</h3>
 				<%= form.fields_for :damage do |damage_form| %>
-          <%= damage_form.collection_select :driver_id, Driver.all, :id, :first_name , {
+          <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
             :multiple => false,
             :include_blank => 'Driver Name'
           } %>
