--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -19,8 +19,7 @@
   <tbody>
     <% @drivers.each do |driver| %>
       <tr>
-        <td><%= driver.first_name %></td>
-        <td><%= driver.last_name %></td>
+        <td><%= driver.full_name %></td>
         <td><%= driver.birth_date %></td>
         <td><%= driver.mobile_phone %></td>
         <td><%= driver.home_phone %></td>
