--- a/app/views/owners/_form.html.erb
+++ b/app/views/owners/_form.html.erb
@@ -12,13 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name, id: :owner_first_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name, id: :owner_last_name %>
+    <%= form.label :full_name %>
+    <%= form.text_field :full_name, id: :owner_full_name %>
   </div>
 
   <div class="field">
