--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>First name:</strong>
-  <%= @owner.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @owner.last_name %>
+  <strong>Full name:</strong>
+  <%= @owner.full_name %>
 </p>
 
 <p>
