Correct Home Adress and Add Driver Form Validation

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -15,7 +15,7 @@
     <%= form.label :full_name %>
     <%= form.text_field :full_name, id: :driver_full_name %>
   </div>
-    
+
   <div class="field">
     <%= form.label :birth_date %>
     <%= form.date_field :birth_date, id: :driver_birth_date %>
@@ -37,8 +37,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :home_adress %>
-    <%= form.text_area :home_adress, id: :driver_home_adress %>
+    <%= form.label :home_address %>
+    <%= form.text_area :home_address, id: :driver_home_address %>
   </div>
 
   <div class="actions">
