--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= driver.mobile_phone %></td>
         <td><%= driver.home_phone %></td>
         <td><%= driver.driving_license_number %></td>
-        <td><%= driver.home_adress %></td>
+        <td><%= driver.home_address %></td>
         <td><%= link_to 'Show', driver %></td>
         <td><%= link_to 'Edit', edit_driver_path(driver) %></td>
         <td><%= link_to 'Destroy', driver, method: :delete, data: { confirm: 'Are you sure?' } %></td>
