--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Home adress:</strong>
-  <%= @driver.home_adress %>
+  <%= @driver.home_address %>
 </p>
 
 <%= link_to 'Edit', edit_driver_path(@driver) %> |
