--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Full name</th>
       <th>Home phone</th>
       <th>Mobile phone</th>
       <th colspan="3"></th>
