--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Expense</h1>
 
-<%= render 'form', expense: @expense %>
+<%= render 'shared/expenses/form', expense: @expense %>
 
 <%= link_to 'Show', @expense %> |
 <%= link_to 'Back', expenses_path %>
