--- a/app/views/shared/expenses/_damage_fields.html.erb
+++ b/app/views/shared/expenses/_damage_fields.html.erb
@@ -1,8 +1,9 @@
 <div class="field">
-	
-	<%= form_for @expense do |form| %>
-			
-			
+
+  <%= debug params[:expense] %>
+
+  <%= form_for @expense do |form| %>
+
 			<% if @expense.errors.any? %>
 					<div id="error_explanation">
 						<h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -14,7 +15,6 @@
 						</ul>
 					</div>
 			<% end %>
-			
 			
 			<div class="field">
 				<%= form.label :amount %>
@@ -35,16 +35,24 @@
 			<div class="field">
 				<h3>Damage Fields</h3>
 				<%= form.fields_for :damage do |damage_form| %>
-          <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
-            :multiple => false,
-            :include_blank => 'Driver Name'
-          } %>
-          <%= damage_form.collection_select :damage_type_id, DamageType.all, :id, :name, {
-            :multiple => false,
-            :include_blank => 'Damage Type',
-          } %>
 
-          <%= damage_form.date_field :date %>
+            <%= damage_form.label :damage_type_id %>
+            <%= damage_form.collection_select :damage_type_id, DamageType.group(:name), :id, :name, {
+              :multiple => false,
+              :include_blank => 'Damage Type',
+            } %>
+
+            <%= damage_form.label :driver_id %>
+            <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
+              :multiple => false,
+              :include_blank => 'Driver Name'
+            } %>
+
+            <%= damage_form.label :date %>
+            <%= damage_form.date_field :date %>
+
+            <%= damage_form.label :kilometers %>
+            <%= damage_form.number_field :kilometers %>
 
 				<% end %>
 			</div>
