--- a/app/views/shared/expenses/_form.html.erb
+++ b/app/views/shared/expenses/_form.html.erb
@@ -59,18 +59,39 @@
         <div class="field">
           <h3>Damage Fields</h3>
           <%= form.fields_for :damage do |damage_form| %>
-              <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {:multiple => false} %>
-              <%= damage_form.collection_select :damage_type_id, DamageType.all, :id, :name, {:multiple => false} %>
+
+              <%= damage_form.label :damage_type_id %>
+              <%= damage_form.collection_select :damage_type_id, DamageType.group(:name), :id, :name, {
+                :multiple => false,
+                :include_blank => 'Damage Type',
+              } %>
+
+              <%= damage_form.label :driver_id %>
+              <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
+                :multiple => false,
+                :include_blank => 'Driver Name'
+              } %>
+
+              <%= damage_form.label :date %>
+              <%= damage_form.date_field :date %>
+
+              <%= damage_form.label :kilometers %>
+              <%= damage_form.number_field :kilometers %>
+
           <% end %>
         </div>
+
     <% end %>
 
     <% if @expense.owner_take %>
 
         <div class="field">
-          <h3>Damage Fields</h3>
+          <h3>Owner Take Fields</h3>
           <%= form.fields_for :owner_take do |owner_take_form| %>
-            zzz
+              <%= owner_take_form.collection_select :owner_id, Owner.all, :id, :full_name , {
+                :multiple => false,
+                :include_blank => 'Select an Owner'
+              } %>
           <% end %>
         </div>
     <% end %>
