Add Damage Type Chained Selection
- Using js extension instead of coffee for javascript files
- Using $(document).ready() with turbo-links
- Add Chained Selection if the Damage type is ‘Accident’

--- a/app/views/shared/expenses/_damage_fields.html.erb
+++ b/app/views/shared/expenses/_damage_fields.html.erb
@@ -40,11 +40,13 @@
               :include_blank => 'Damage Type',
             } %>
 
-            <%= damage_form.label :driver_id %>
-            <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
-              :multiple => false,
-              :include_blank => 'Driver Name'
-            } %>
+            <div id="drivers-list">
+              <%= damage_form.label :driver_id %>
+              <%= damage_form.collection_select :driver_id, Driver.all, :id, :full_name , {
+                :multiple => false,
+                :include_blank => 'Driver Name'
+              } %>
+            </div>
 
             <%= damage_form.label :date %>
             <%= damage_form.date_field :date %>
