--- a/app/views/shared/expenses/_form.html.erb
+++ b/app/views/shared/expenses/_form.html.erb
@@ -60,6 +60,9 @@
           <h3>Damage Fields</h3>
           <%= form.fields_for :damage do |damage_form| %>
 
+              <%= damage_form.label :date %>
+              <%= damage_form.date_field :date %>
+
               <%= damage_form.label :damage_type_id %>
               <%= damage_form.collection_select :damage_type_id, DamageType.group(:name), :id, :name, {
                 :multiple => false,
@@ -67,7 +70,6 @@
               } %>
 
               <div id="drivers-list">
-
                 <% if @expense.damage.driver_id ||  @expense.damage.damage_type.name == 'Accident' %>
 
                     <%= damage_form.label :driver_id %>
@@ -79,8 +81,8 @@
                 <% end %>
               </div>
 
-              <%= damage_form.label :date %>
-              <%= damage_form.date_field :date %>
+              <%= damage_form.label :labor, "Main d'oeuvre(add manually the labor amount to the initial amount)" %>
+              <%= damage_form.number_field :labor %>
 
               <%= damage_form.label :kilometers %>
               <%= damage_form.number_field :kilometers %>
