Add Manager and Linked Details
- Add Managers
- Update Seeds with new order and files
- Update Model Relations

--- a/app/views/cabs/_form.html.erb
+++ b/app/views/cabs/_form.html.erb
@@ -1,38 +1,46 @@
 <%= form_with(model: cab, local: true) do |form| %>
-  <% if cab.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(cab.errors.count, "error") %> prohibited this cab from being saved:</h2>
+    <% if cab.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(cab.errors.count, "error") %> prohibited this cab from being saved:</h2>
 
-      <ul>
-      <% cab.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% cab.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :cab_model_id %>
+      <%= form.collection_select :cab_model_id, CabModel.group(:name), :id, :name, {
+            :multiple => false,
+            :include_blank => 'Select a Cab Model',
+          } %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :cab_model_id %>
-    <%= form.collection_select :cab_model_id, CabModel.group(:name), :id, :name, {
-          :multiple => false,
-          :include_blank => 'Select a Cab Model',
-        } %>
-  </div>
+    <div class="field">
+      <%= form.label :license_plate %>
+      <%= form.text_field :license_plate, id: :cab_license_plate %>
+    </div>
 
-  <div class="field">
-    <%= form.label :license_plate %>
-    <%= form.text_field :license_plate, id: :cab_license_plate %>
-  </div>
+    <div class="field">
+      <%= form.label :agreement_number %>
+      <%= form.text_field :agreement_number, id: :cab_agreement_number %>
+    </div>
 
-  <div class="field">
-    <%= form.label :agreement_number %>
-    <%= form.text_field :agreement_number, id: :cab_agreement_number %>
-  </div>
+    <div class="field">
+      <%= form.label :total_mileage %>
+      <%= form.text_field :total_mileage, id: :cab_total_mileage %>
+    </div>
 
-  <div class="field">
-    <%= form.label :total_mileage %>
-    <%= form.text_field :total_mileage, id: :cab_total_mileage %>
-  </div>
+    <div class="field">
+      <%= form.label :manager_id %>
+      <%= form.collection_select :manager_id, Manager.group(:full_name), :id, :full_name, {
+        :multiple => false,
+        :include_blank => 'Select a Manager',
+      } %>
+    </div>
 
   <div class="actions">
     <%= form.submit %>
