--- a/app/views/shared/expenses/_form.html.erb
+++ b/app/views/shared/expenses/_form.html.erb
@@ -53,11 +53,13 @@
                 :include_blank => 'Select a cause of Break',
               } %>
 
-              <%= break_form.label :damage_id %>
-              <%= break_form.collection_select :damage_id, Damage.group(:date), :id, :damage_type_id, {
-                :multiple => false,
-                :include_blank => 'Select a Damage',
-              } %>
+              <div id="damages-list">
+                <%= break_form.label :damage_id %>
+                <%= break_form.collection_select :damage_id, Damage.group(:date), :id, :damage_type_id, {
+                  :multiple => false,
+                  :include_blank => 'Select a Damage',
+                } %>
+              </div>
 
               <%= break_form.label :start_date %>
               <%= break_form.date_field :start_date %>
