--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,23 +3,50 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+
+    <!-- Extra Fields -->
+
+    <div class="field">
+      <%= f.label :full_name%><br />
+      <%= f.text_field :full_name, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :home_phone %><br />
+      <%= f.number_field :home_phone, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :mobile_phone %><br />
+      <%= f.number_field :mobile_phone, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :birth_date %><br />
+      <%= f.date_field :birth_date, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :cin %><br />
+      <%= f.text_field :cin, autofocus: true %>
+    </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
