--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,23 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import 'bootstrap';
+@import 'fonts';
+
+//
+//
+// Bootstrap
+// Default
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
+@import "bootstrap/reboot";
+
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+@import "bootstrap/transitions";
+@import "bootstrap/alert";
+
+@import 'login';
+@import 'scaffolds';
