--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,11 +3,7 @@
 
 <div class="devise">
 
-  <div class="text-center">
-    <%= link_to root_path, :class => 'logo' do %>
-        <span>Smart<span>taxi</span></span>
-    <% end %>
-  </div>
+  <%= render 'devise/shared/logo' %>
 
   <div class="card-box">
 
