Add Default Layout
- Add Sidebar Navigation
- Add Header
- Add Home Controller
- Install Font Awesome
- Correct some bugs
- Include nested Routes

--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= insurance.expense %></td>
         <td><%= insurance.start_date %></td>
-        <td><%= insurance.end_date %></td>
+        <td><%= insurance.expiration_date %></td>
         <td><%= link_to 'Show', insurance %></td>
         <td><%= link_to 'Edit', edit_insurance_path(insurance) %></td>
         <td><%= link_to 'Destroy', insurance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
