--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  */
 @import 'fonts';
+@import 'font-awesome';
 
 //
 //
@@ -22,12 +23,22 @@
 @import "bootstrap/mixins";
 @import "bootstrap/reboot";
 
+// Utilities
+@import "bootstrap/utilities/spacing";
+@import "bootstrap/utilities/display";
+@import "bootstrap/utilities/position";
+
+//
 @import "bootstrap/grid";
 @import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
 @import "bootstrap/alert";
+@import "bootstrap/pagination";
+@import "bootstrap/nav";
+@import "bootstrap/navbar";
 
 @import 'login';
+@import 'sidebar';
 @import 'scaffolds';
