--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -3,8 +3,10 @@ body {
 }
 
 .logo {
-  font-size: 42px;
-  font-family: 'Rancho', cursive;
+  font-size: 29px;
+  font-family: 'Georgia', cursive;
+  font-style: italic;
+  font-weight: 100;
 
   &:hover {
     text-decoration: none;
