--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,30 @@
 
   <body>
 
-    <% if notice %>
-      <div class="alert alert-success" role="alert"><%= notice %></div>
-    <% end %>
+    <div class="container-fluid">
 
-    <%= yield %>
-  
+      <!-- # Header -->
+      <%= render 'layouts/header' %>
+
+      <!-- # Content -->
+      <div class="row">
+
+        <!-- # Sidebar -->
+        <div class="col-sm-2 col-md-2 d-none d-sm-block sidebar">
+          <%= render 'layouts/sidebar' %>
+        </div>
+
+        <!-- # Main -->
+        <div class="col-sm-10 ml-sm-auto col-md-10 pt-3" role="main">
+          <% if notice %>
+              <div class="alert alert-success" role="alert"><%= notice %></div>
+          <% end %>
+          <%= yield %>
+        </div>
+
+      </div>
+
+    </div>
+
   </body>
 </html>
