--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,8 @@
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
+@import "bootstrap/dropdown";
+@import "bootstrap/popover";
 @import "bootstrap/alert";
 @import "bootstrap/pagination";
 @import "bootstrap/nav";
