--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,71 @@
 header {
 
-  .container-fluid {
-    padding-left: 0;
+  background: #6b7fa7;
+  padding: 15px 15px 135px 20px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
+  color: #fff;
+
+  a {
+    color: #fff;
   }
 
+  &.fixed-top {
+    z-index: 0;
+  }
+
+  .navbar {
+    padding: 0;
+    a {
+      display: block;
+      padding: 10px;
+      &:hover {
+        color: #fff;
+        background-color: #62769e;
+        transition: background-color 300ms linear;
+        text-decoration: none;
+      }
+    }
+    .dropdown-menu {
+      right: 0;
+      left: inherit;
+    }
+  }
+
+  .navbar-collapse {
+    padding: 0 10px;
+  }
+
+  .user-dropdown {
+    font-size: 13px;
+    margin-top: 15px;
+    .pull-right {
+      margin-top: -7px;
+      margin-left: 8px;
+    }
+
+    li {
+      float: left;
+    }
+
+    img {
+      border-radius: 100%;
+      width: 32px;
+      height: 32px;
+    }
+    .dropdown-menu {
+      padding: 0;
+    }
+    .dropdown-item {
+      padding: 10px 0;
+      > a {
+        margin: 0;
+        padding: 5px 14px;
+        font-size: 13px;
+        color: #3e495f;
+        &:hover {
+          background: #65b752;
+        }
+      }
+    }
+  }
 }
