--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -9,9 +9,9 @@
   padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #fff;
+  background: #3e495f;
   box-shadow: 1px 0 20px rgba(0, 0, 0, .08);
-  border-right: 1px solid #eee;
+  border-right: 1px solid #3e495f;
   font-weight: 100;
   font-size: 14px;
   .top-logo {
@@ -19,7 +19,7 @@
     padding: 10px 0 20px 0;
   }
   h4 {
-    color: #70829A;
+    color: #8ba0bd;
     font-size: 11px;
     font-weight: bold;
     text-transform: uppercase;
@@ -28,16 +28,19 @@
   a {
     display: block;
     width: 100%;
-    color: #54667a;
+    color: #fff;
     padding: 6px 14px;
     &:hover {
       text-decoration: none;
     }
   }
+  .nav {
+    margin-bottom: 10px;
+  }
   .nav-item {
     width: 100%;
     padding-bottom: 5px;
-    background-color:  #fff;
+    background-color: #3e495f;
     transition: background-color 300ms linear;
     > a {
       .fa:first-child {
@@ -57,7 +60,7 @@
           font-size: 13px;
           padding-left: 20px;
           &:hover {
-            background-color: #b9b9b9;
+            background-color: #65b752;
             transition: background-color 500ms linear;
           }
         }
@@ -65,13 +68,11 @@
     }
   }
   .active-list {
-    background-color: #dedede;
+    background-color: #62708c;
     transition: background-color 100ms linear;
-    border-bottom: 1px dotted #c5c5c5;
-    padding: 10px 0 0 0;
-    transition: padding 100ms linear;
+    border-bottom: 1px dotted #6b7894;
     .active {
-      background-color: #b9b9b9;
+      background-color: #65b752;
     }
     .fa-angle-right {
       display: none;
