--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,25 +1,54 @@
-<% if user_signed_in? %>
-    <header class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-      <nav class="navbar navbar-expand-md fixed-top">
+ <header class="fixed-top">
+    <nav class="col-sm-9 ml-sm-auto col-md-10 navbar navbar-expand-md">
 
+      <!-- Navigation -->
+      <div class="collapse navbar-collapse">
 
-        <!-- Navigation -->
-        <div class="collapse navbar-collapse">
+        <!--  # Left -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a href="#"><i class="fa fa-navicon fa-lg"></i></a>
+          </li>
+        </ul>
 
-          <!-- -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <%= link_to 'Expenses' , expenses_path %>
-            </li>
-          </ul>
+        <!-- # Right -->
+        <ul class="user-dropdown">
 
-          <!-- -->
-          <ul class="mt-2 mt-md-0">
-            <li>sss</li>
-          </ul>
+          <!-- # -->
+          <li><a href="#" class="fa fa-expand fa-lg"></a></li>
 
-        </div>
+          <!-- # -->
+          <li class="dropdown">
+            <a data-toggle="dropdown"
+               href="#userMenuDropDown"
+               aria-haspopup="true"
+               aria-expanded="false"
+               aria-controls="userMenuDropDown">
 
-      </nav>
-    </header>
-<% end %>
+              <span class="pull-right">
+                <% if current_user.picture? %>
+                  <%= image_tag(current_user.picture) %>
+                    <% else %>
+                  <%= image_tag('default-user.png') %>
+                <% end %>
+              </span>
+              <%= current_user.full_name %>
+            </a>
+
+            <!-- # Drop Down -->
+            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenuDropDown">
+              <li class="dropdown-item">
+
+                <%= link_to edit_user_registration_path(current_user) do %>
+                    <%= fa_icon 'user' %> Profile
+                <% end %>
+
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+      </div>
+
+    </nav>
+ </header>
